--- a/email-confirmation.html
+++ b/email-confirmation.html
@@ -32,7 +32,7 @@
                     <div class="text-center">
                         <button type="submit" class="btn btn-success btn-lg my-3">Submit</button>
                     </div>
-                    <p class="text-center">Don't have an account? <a href="./forget-password.html">Sign Up</a></p>
+                    <p class="text-center">Don't have an account? <a href="./index.html">Sign Up</a></p>
                   </form>
             </div>
         </div>
