--- a/email-confirmation.html
+++ b/email-confirmation.html
@@ -17,8 +17,8 @@
   </head>
   <body>
         <div class="row">
-            <div class="col-md-6 col-lg-4 mx-auto">
-                <h3 class="my-4 text-center prj green-text">Forget Password</h3>
+            <div class="col-md-6 col-lg-4 mx-auto p-4">
+                <h3 class="my-4 text-center prj green-text">Reset Password</h3>
                 <form class="p-5">
                     <div class="form-group">
                       <label for="password">Password</label>
