--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
         <div class="row">
-            <div class="col-md-6 col-lg-4 mx-auto">
+            <div class="col-md-6 col-lg-4 mx-auto p-4">
                 <h3 class="my-4 text-center prj green-text">Forget Password</h3>
                 <form class="p-5">
                     <div class="form-group">
